MGMT-1284 Enhance InstallProgressParams with status enum and an info string
