# swagger.yaml
@@ -565,7 +565,7 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
-  /clusters/{clusterId}/hosts/{hostId}/progress:
+  /clusters/{cluster_id}/hosts/{host_id}/progress:
     put:
       tags:
         - installer
@@ -573,13 +573,13 @@ paths:
       operationId: UpdateHostInstallProgress
       parameters:
         - in: path
-          name: clusterId
+          name: cluster_id
           description: The ID of the cluster to retrieve
           type: string
           format: uuid
           required: true
         - in: path
-          name: hostId
+          name: host_id
           description: The ID of the host to retrieve
           type: string
           format: uuid
@@ -1494,7 +1494,25 @@ definitions:
     type: string
 
   host-install-progress-params:
-    type: string
+    type: object
+    required:
+     - progress_status
+    properties:
+      progress_status:
+        type: string
+        enum:
+        - Starting installation
+        - Installing
+        - Bootstrapping installation
+        - Waiting for control plane
+        - Writing image to disk
+        - Rebooting
+        - Joined
+        - Done
+        - Failed
+      progress_info:
+        type: string
+        x-go-custom-tag: gorm:"type:varchar(2048)"
 
   error:
     type: object
